# data_streaming_fastapi

./: client.py  pyproject.toml  srver.py
